# ohos_rust_napi_demo

./: .gitignore  README.md  clean
AppScope/: app.json5
AppScope/resources/base/element/: string.json
entry/: oh-package-lock.json5  oh-package.json5
entry/src/main/ets/pages/: Index.ets
entry/src/main/libs/libRustHello/: index.d.ts  oh-package.json5
entry/src/main/resources/base/element/: string.json
rust_hello/: Cargo.toml  ohos_build  ohos_target_toolchain
rust_hello/src/: lib.rs
